mathlib5/spec/MATHLIB5.bnf
(* ============================================================
   MATHLIB5 Surface Syntax — EBNF (ISO/IEC 14977)
   ============================================================ *)

(* ---------- Lexical ---------- *)
IDENTIFIER      = LETTER, { LETTER | DIGIT | '_' | '\'' | '?' | '!' };
OPERATOR        = SYMBOL, { SYMBOL };
SYMBOL          = '+' | '-' | '*' | '/' | '=' | '<' | '>' | '≤' | '≥' | '≠'
                | '∧' | '∨' | '¬' | '→' | '←' | '⇒' | '⇐' | '↔'
                | '∑' | '∏' | '∫' | '∂' | '∇' | '√' | '∞'
                | '∘' | '⊗' | '⊕' | '†' | '‡' | '·' | '×' | '÷'
                | '↑' | '↓' | '⊤' | '⊥' | '│' | '‖' | '≡' | '≅' | '≈'
                | '⊂' | '⊃' | '⊆' | '⊇' | '∈' | '∉' | '∪' | '∩' | '∖'
                | '∀' | '∃' | '∄' | 'λ' | 'Λ' | 'Π' | 'Σ' | 'ℕ' | 'ℤ' | 'ℚ' | 'ℝ' | 'ℂ'
                | '𝕀' | '𝕆' ; (* Imaginary, Octonion *)

NUMERAL         = DIGIT, { DIGIT | '_' };
STRING_LIT      = '"', { CHAR - '"' - '\n' }, '"';
CHAR_LIT        = '\'', CHAR - '\'' - '\n', '\'';

KEYWORD         = 'theorem' | 'lemma' | 'proof' | 'qed' | 'by' | 'have' | 'show'
                | 'function' | 'def' | 'let' | 'in' | 'where' | 'if' | 'then' | 'else'
                | 'match' | 'with' | 'case' | 'of' | 'inductive' | 'structure' | 'class'
                | 'instance' | 'extend' | 'namespace' | 'open' | 'import' | 'export'
                | 'module' | 'kernel' | 'target' | 'vectorize' | 'verify' | 'pragma'
                | 'Int' | 'Nat' | 'Rational' | 'Algebraic' | 'Symbolic'
                | 'Tensor' | 'Matrix' | 'QuantumState' | 'Qubit' | 'Qureg'
                | 'H' | 'X' | 'Y' | 'Z' | 'CNOT' | 'CZ' | 'SWAP' | 'Toffoli'
                | 'measure' | 'reset' | 'entangle' | 'superpose'
                | 'C--' | 'LLVM' | 'MLIR' | 'PTX' | 'SPIRV' | 'Verilog' | 'Chisel'
                | 'AVX512' | 'NEON' | 'SVE' | 'AMX' | 'TPU' | 'FPGA'
                | 'overflow' | 'underflow' | 'precision' | 'alignment' | 'pipeline'
                | 'true' | 'false' | 'Type' | 'Prop' | 'Sort' | 'Kind'
                | 'Σ' | 'Π' | '∫' | '∂' | '∇' | '√' | '∞' | 'ℵ' | 'ℶ' ;

COMMENT         = '--', { CHAR - '\n' }, '\n'
                | '/-', { CHAR - '-/' }, '-/' ;

WHITESPACE      = ' ' | '\t' | '\n' | '\r' ;

(* ---------- Program ---------- *)
PROGRAM         = { DECLARATION } ;

DECLARATION     = THEOREM_DECL
                | FUNCTION_DECL
                | KERNEL_DECL
                | MODULE_DECL
                | IMPORT_DECL
                | NAMESPACE_DECL
                | INDUCTIVE_DECL
                | STRUCTURE_DECL
                | CLASS_DECL
                | INSTANCE_DECL ;

(* ---------- Module System ---------- *)
MODULE_DECL     = 'module', IDENTIFIER, '{', { DECLARATION }, '}' ;
IMPORT_DECL     = 'import', IDENTIFIER, { '.' , IDENTIFIER } ;
NAMESPACE_DECL  = 'namespace', IDENTIFIER, '{', { DECLARATION }, '}' ;
OPEN_DECL       = 'open', IDENTIFIER, { ',' , IDENTIFIER } ;

(* ---------- Types ---------- *)
TYPE            = BASE_TYPE
                | FUNCTION_TYPE
                | DEPENDENT_TYPE
                | REFINEMENT_TYPE
                | TENSOR_TYPE
                | MATRIX_TYPE
                | QUANTUM_TYPE
                | TYPE_APP
                | TYPE_VAR
                | '(' , TYPE , ')' ;

BASE_TYPE       = 'Int' | 'Nat' | 'Rational' | 'Algebraic' | 'Symbolic'
                | 'Bool' | 'String' | 'Unit' | 'Type' | 'Prop' | 'Sort' ;

FUNCTION_TYPE   = TYPE, '→', TYPE
                | '∀', BINDER, { ',' , BINDER }, '.', TYPE ;

DEPENDENT_TYPE  = 'Π', BINDER, { ',' , BINDER }, '.', TYPE
                | 'Σ', BINDER, { ',' , BINDER }, '.', TYPE ;

REFINEMENT_TYPE = '{', IDENTIFIER, ':', TYPE, '|', EXPR, '}' ;

TENSOR_TYPE     = 'Tensor', '[', TYPE, { ',' , TYPE }, ']', '{', SHAPE_SPEC, '}' ;
SHAPE_SPEC      = DIM_SPEC, { '×', DIM_SPEC } ;
DIM_SPEC        = NUMERAL | IDENTIFIER | '?' ; (* ? = dynamic *)

MATRIX_TYPE     = 'Matrix', '[', TYPE, ']', '{', DIM_SPEC, '×', DIM_SPEC, '}' ;

QUANTUM_TYPE    = 'QuantumState', '[', NUMERAL, ']'   (* n-qubit state *)
                | 'Qubit'
                | 'Qureg', '[', NUMERAL, ']' ;

TYPE_APP        = IDENTIFIER, '{', TYPE, { ',' , TYPE }, '}' ;
TYPE_VAR        = '?' , IDENTIFIER ; (* MetavariVARIABLE        = IDENTIFIER ;

SIGMA_EXPR      = 'Σ', '[', BINDER, '..', EXPR, ']', EXPR
                | '∑', BINDER, '∈', EXPR, ',', EXPR ;

PI_EXPR         = 'Π', '[', BINDER, '..', EXPR, ']', EXPR
                | '∏', BINDER, '∈', EXPR, ',', EXPR ;

INTEGRAL_EXPR   = '∫', '[', EXPR, '..', EXPR, ']', EXPR, 'd', IDENTIFIER ;

SET_COMPREHENSION = '{', EXPR, '|', BINDER, '∈', EXPR, ',', EXPR, '}' ;

TUPLE           = '(', EXPR, { ',' , EXPR }, ')' ;

VECTOR_LIT      = '[', EXPR, { ';' , EXPR }, ']' ;

MATRIX_LIT      = '[', ROW, { ';' , ROW }, ']' ;
ROW             = EXPR, { ',' , EXPR } ;

PAREN_EXPR      = '(', EXPR, ')' ;

PATTERN         = '_'
                | VARIABLE
                | LITERAL
                | CONSTRUCTOR_PATTERN
                | TUPLE_PATTERN
                | VECTOR_PATTERN
                | AS_PATTERN ;

CONSTRUCTOR_PATTERN = IDENTIFIER, [ PATTERN, { ',' , PATTERN } ] ;
TUPLE_PATTERN       = '(', PATTERN, { ',' , PATTERN }, ')' ;
VECTOR_PATTERN      = '[', PATTERN, { ';' , PATTERN }, ']' ;
AS_PATTERN          = VARIABLE, '@', PATTERN ;

ARG_LIST        = EXPR, { ',' , EXPR } ;

(* ---------- Theorem / Proof ---------- *)
THEOREM_DECL    = ( 'theorem' | 'lemma' ), IDENTIFIER, [ TYPE_PARAMS ], ':',
                  TYPE, [ ':=' , PROOF_TERM ] ;

TYPE_PARAMS     = '{', TYPE_VAR, { ',' , TYPE_VAR }, '}' ;

PROOF_TERM      = 'by', TACTIC_SEQUENCE
                | EXPR ;

TACTIC_SEQUENCE = TACTIC, { ';', TACTIC } ;
TACTIC          = 'intro' | 'apply' | 'rw' | 'simp' | 'norm_num' | 'linarith'
                | 'ring' | 'field' | 'induction' | 'cases' | 'constructor'
                | 'exact' | 'assumption' | 'tauto' | 'omega' | 'decide'
                | 'have', IDENTIFIER, ':', TYPE, ':=' , PROOF_TERM
                | 'calc', '{', CALC_STEP, { CALC_STEP }, '}' ;

CALC_STEP       = EXPR, REL_OP, EXPR, [ ':=' , PROOF_TERM ] ;
REL_OP          = '=' | '≤' | '<' | '≥' | '>' | '≡' | '≅' ;

(* ---------- Function Definition ---------- *)
FUNCTION_DECL   = 'function', IDENTIFIER, [ TYPE_PARAMS ], '(',
                  [ PARAM_LIST ], ')', [ ':', TYPE ], '=', EXPR ;

PARAM_LIST      = BINDER, { ',' , BINDER } ;

(* ---------- Kernel Definition ---------- *)
KERNEL_DECL     = 'kernel', IDENTIFIER, [ TYPE_PARAMS ], ':',
                  '{', KERNEL_SPEC, { ',' , KERNEL_SPEC }, '}' ;

KERNEL_SPEC     = 'target', '=', TARGET_SPEC
                | 'vectorize', '=', VECTORIZE_SPEC
                | 'verify', '=', VERIFY_SPEC
                | 'pragma', '=', STRING_LIT
                | 'layout', '=', LAYOUT_SPEC
                | 'precision', '=', PRECISION_SPEC ;

TARGET_SPEC     = 'C--' | 'LLVM' | 'MLIR' | 'PTX' | 'SPIRV' | 'Verilog' | 'Chisel' ;
VECTORIZE_SPEC  = 'AVX512' | 'NEON' | 'SVE' | 'AMX' | 'TPU' | 'FPGA' | 'auto' | 'none' ;
VERIFY_SPEC     = 'overflow', '=', BOOL
                | 'underflow', '=', BOOL
                | 'precision', '=', PRECISION_SPEC
                | 'alignment', '=', NUMERAL
                | 'pipeline', '=', NUMERAL
                | 'memory_safety', '=', BOOL
                | 'termination', '=', BOOL ;

LAYOUT_SPEC     = 'row_major' | 'col_major' | 'blocked', '{', NUMERAL, '×', NUMERAL, '}' ;
PRECISION_SPEC  = 'fp64' | 'fp32' | 'fp16' | 'bf16' | 'int64' | 'int32' | 'int16' | 'int8'
                | 'posits', '(', NUMERAL, ',', NUMERAL, ')' ;
BOOL            = 'true' | 'false' ;

(* ---------- Inductive / Structure / Class ---------- *)
INDUCTIVE_DECL  = 'inductive', IDENTIFIER, [ TYPE_PARAMS ], [ ':', TYPE ],
                  '{', { CONSTRUCTOR_DECL }, '}' ;

CONSTRUCTOR_DECL = IDENTIFIER, [ ':', TYPE ] ;

STRUCTURE_DECL  = 'structure', IDENTIFIER, [ TYPE_PARAMS ], [ ':', TYPE ],
                  '{', { FIELD_DECL }, '}' ;

FIELD_DECL      = IDENTIFIER, ':', TYPE ;

CLASS_DECL      = 'class', IDENTIFIER, [ TYPE_PARAMS ], [ ':', TYPE ],
                  '{', { METHOD_DECL }, '}' ;

METHOD_DECL     = IDENTIFIER, ':', TYPE ;

INSTANCE_DECL   = 'instance', [ IDENTIFIER, ':' ], TYPE, [ 'where', '{', { METHOD_IMPL }, '}' ] ;
METHOD_IMPL     = IDENTIFIER, '=', EXPR ;

(* ============================================================
   End of Grammar
   ============================================================ *)
